--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -27,6 +27,10 @@
 
         transition: all 0.3s ease-in-out;
 
+        @media screen and (min-width:2000px) {
+            padding: 2rem;
+        }
+
         img {
             width: 40px;
             height: 40px;
