years experience fz

--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -133,7 +133,12 @@
         font-weight: 800;
         font-size: .9em;
         color: var(--secondary-color);
+
+        @media screen and (min-width: 2000px) {
+            font-size: 1.4em;
+        }
     }
+
 
     @media screen and (max-width: 450px) {
         margin-right: 1rem;
