--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -161,14 +161,14 @@
 
     .app__header-img {
         flex: 1;
-        height: 100%;
+        // height: 100%;
         display: flex;
         justify-content: center;
         align-items: flex-end;
         position: relative;
 
-        img {
-            width: 80%;
+        .profilePic {
+            width: 50%;
             object-fit: contain;
             z-index: 1;
         }
@@ -187,14 +187,13 @@
             }
         }
 
-        .hand_circle {
+        .small_circle {
             position: absolute;
-            width: 37%;
+            width: 30%;
             z-index: 0;
-            left: 12%;
-            bottom: 21%;
-            filter: brightness(.5);
+            top: 0;
+            left: 5%;
+            opacity: .7;
         }
     }
-
 }
