--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -128,6 +128,10 @@
             color: var(--white-color);
         }
     }
+
+    @media screen and (max-width:900px) {
+        opacity: .6;
+    }
 }
 
 .app__work-content {
