--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -48,6 +48,7 @@
 
     .app__work-item {
         width: 270px;
+        min-height: 25rem;
         flex-direction: column;
 
         margin: 2rem;
