--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -171,6 +171,7 @@
         .profilePic {
             width: 50%;
             object-fit: contain;
+            opacity: .9;
             z-index: 1;
         }
 
