--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -25,6 +25,11 @@
   background-color: #fef4f5;
   transition: all 0.3s ease-in-out;
 }
+@media screen and (min-width: 2000px) {
+  .app__footer-cards .app__footer-card {
+    padding: 2rem;
+  }
+}
 .app__footer-cards .app__footer-card img {
   width: 40px;
   height: 40px;
