--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -58,7 +58,8 @@
 .app__header .app__header-info .app__header-badge .badge-cmp,
 .app__header .app__header-info .app__header-badge .tag-cmd {
   padding: 1rem 2rem;
-  border: var(--white-color);
+  border: var(--black-color);
+  background-color: var(--white-color);
   border-radius: 15px;
   flex-direction: row;
   width: auto;
@@ -147,16 +148,16 @@
 }
 .app__header .app__header-img {
   flex: 1;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: flex-end;
   position: relative;
 }
-.app__header .app__header-img img {
-  width: 80%;
+.app__header .app__header-img .profilePic {
+  width: 65%;
   -o-object-fit: contain;
      object-fit: contain;
+  opacity: 0.9;
   z-index: 1;
 }
 .app__header .app__header-img .overlay_circle {
@@ -166,18 +167,17 @@
   bottom: 0;
   z-index: 0;
   width: 100%;
-  height: 90%;
 }
 @media screen and (max-width: 1200px) {
   .app__header .app__header-img .overlay_circle {
     margin: 2rem 0;
   }
 }
-.app__header .app__header-img .hand_circle {
+.app__header .app__header-img .small_circle {
   position: absolute;
-  width: 37%;
+  width: 30%;
   z-index: 0;
-  left: 12%;
-  bottom: 21%;
-  filter: brightness(0.5);
+  top: 0;
+  left: 5%;
+  opacity: 0.7;
 }/*# sourceMappingURL=Header.css.map */
